# lakehouse-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: app.py  logging_config.py
src/agent/: agent.py  schemas.py  system_prompt.md
src/mcp_server/: server.py
tests/: test_tools.py
